--- a/main.html
+++ b/main.html
@@ -1,4 +1,16 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Getting Started</title>
+</head>
+<body>
+    <!-- Div container with the required text and id attribute -->
+    <div id="text">Welcome to the world of Web development</div>
+</body>
+</html>
 
 <html>
 
